--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "~1.4.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "cookie-parser": "~1.4.4",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
+    "mongoose": "^6.5.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
-    "passport-jwt": "^4.0.1",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0"
   }
 }
