--- a/vueApp/package.json
+++ b/vueApp/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "axios": "^1.6.5",
     "npm": "^9.6.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
